# shapefle-processing

./: README.md  pyproject.toml
src/shapefile_processing/: __main__.py  data_quality_services.py  main_window.py  map_renderer.py  shapefile_manager.py  spatial_metrics_service.py  zoom_to_data_button.py
src/shapefile_processing/services/: __init__.py  data_quality_services.py  spatial_metrics_service.py
src/shapefile_processing/ui/: __init__.py  attribute_table_dialog.py  main_window.py
tests/: test_data_quality_services.py  test_main_window.py  test_shapefile_manager.py  test_spatial_metrics_service.py
