[project]
name = "shapefile-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "Marin Leontenko",email = "marin.leontenko@ses.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "shapefile_processing", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PyQt6 = "^6.0"
pyqtgraph = "^0.12.0"
geopandas = ">=0.14.4,<1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
